Remove unnecessary scripts and images. Add style to prevent clicks when the menu is open on mobile.

--- a/style.css
+++ b/style.css
@@ -17912,6 +17912,12 @@ grid-template-columns: 1fr 1fr; */
 	
 }	
 
+@media (max-width: 1113px){
+	body.primary-menu-open section{
+		pointer-events: none;
+	}
+}
+
 @media (min-width: 768px){
 	.whatsapp-chat-bubble{
 		top: unset;
